--- a/src/style/WeightNCharge.css
+++ b/src/style/WeightNCharge.css
@@ -1,18 +1,27 @@
-.postWeightPrice {
+.closeBtn {
+  align-self: flex-end;
+  padding-right: 20px;
+  margin-top: 10px;
+}
+
+.postWeightCharge {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: auto;
-  width: 100%;
+  width: 70%;
+  border: 1px solid #aaa;
+  border-radius: 20px;
+  margin-top: 20px;
 }
 .postWeight {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  margin-left: 55px;
   height: auto;
   width: 100%;
-  margin-top: 20px;
-  /* border: 1px solid #aaa; */
+  margin-top: -30px;
 }
 .postWeight h4 {
   margin-right: 28px;
@@ -29,17 +38,5 @@
   justify-content: center;
   height: auto;
   width: 100%;
-  /* border: 1px solid #ccc; */
-  padding: 10px 0;
-}
-
-.cashCharge {
-  display: flex;
-  align-items: center;
-}
-.cashCharge h4 {
-  margin-right: 20px;
-}
-.cashCharge div {
-  margin-right: 10px;
+  padding: 10px 0 20px 0;
 }
