1차 스타일 적용

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,9 +1,9 @@
-.body {
+.mainBox {
   margin-top: 10px;
   width: 340px;
   height: 500px;
   display: flex;
   align-items: center;
-  border: 2px solid red;
   flex-direction: column;
+  transition: all 0.5s ease;
 }
