--- a/src/style/TopMenu.css
+++ b/src/style/TopMenu.css
@@ -4,12 +4,17 @@
   justify-content: center;
   margin-top: 20px;
 }
-.postType div {
-  border: 1px solid blue;
+.type {
+  border: 1px solid rgb(246, 181, 61);
   border-radius: 5px;
   height: 20px;
-  padding: 5px;
+  padding: 5px 10px;
+  &:hover {
+    background-color: rgb(246, 181, 61);
+    color: #fff;
+    transition: all 0.1s ease;
+  }
 }
 .type:nth-child(2) {
-  margin: 0 20px;
+  margin: 0 25px;
 }
