--- a/src/style/ReceiveCash.css
+++ b/src/style/ReceiveCash.css
@@ -8,3 +8,16 @@
 .cashCharge div {
   margin-right: 10px;
 }
+#fiveThousand,
+#tenThousand {
+  cursor: pointer;
+  border: 1px solid rgb(246, 181, 61);
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #fff;
+  &:hover {
+    background-color: rgb(246, 181, 61);
+    color: #fff;
+    transition: all 0.1s ease;
+  }
+}
