--- a/src/style/WeightNCharge.css
+++ b/src/style/WeightNCharge.css
@@ -1,5 +1,5 @@
 .closeBox {
-  width: 90%;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
 }
@@ -22,11 +22,12 @@
   border: 1px solid #aaa;
   border-radius: 20px;
   margin-top: 20px;
+  padding: 0 20px;
 }
 .postWeight {
   display: flex;
   flex-direction: column;
-  margin-left: 55px;
+  margin-left: 0px;
   height: auto;
   width: 100%;
   margin-top: -30px;
