무게 선택시 금액 추가되는 로직 수정 및 금액 삭제 기능 추가

--- a/src/style/WeightNCharge.css
+++ b/src/style/WeightNCharge.css
@@ -6,8 +6,15 @@
 .closeBtn {
   margin: 10px 0 20px 0;
   padding: 2.5px 5px;
+  border: none;
+  font-size: 17px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
   &:hover {
-    color: orangered;
+    color: red;
+    background-color: #fff;
+    font-weight: bold;
     cursor: pointer;
   }
 }
