--- a/src/style/CalculatedValue.css
+++ b/src/style/CalculatedValue.css
@@ -11,6 +11,21 @@
   width: 100%;
 }
 
+.removeBtn {
+  border: none;
+  margin-left: 10px;
+  font-size: 17px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  &:hover {
+    color: red;
+    background-color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
+
 .calculBox,
 .resetBox {
   display: flex;
@@ -27,6 +42,7 @@
     background-color: rgb(246, 181, 61);
     color: #fff;
     transition: all 0.1s ease;
+    cursor: pointer;
   }
 }
 
