--- a/src/style/TopMenu.css
+++ b/src/style/TopMenu.css
@@ -13,6 +13,7 @@
     background-color: rgb(246, 181, 61);
     color: #fff;
     transition: all 0.1s ease;
+    cursor: pointer;
   }
 }
 .type:nth-child(2) {
