--- a/src/style/CalculatedValue.css
+++ b/src/style/CalculatedValue.css
@@ -56,7 +56,21 @@
   display: flex;
   justify-content: flex-end;
 }
-.calculBtn,
+.calculBtn {
+  border: 1px solid orange;
+  padding: 5px 10px;
+  font-size: 15px;
+  border-radius: 10px;
+  background-color: #fff;
+  &:hover {
+    background-color: orange;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    transition: all 0.1s ease;
+    cursor: pointer;
+  }
+}
 .resetBtn {
   border: 1px solid rgb(246, 64, 61);
   padding: 5px 10px;
@@ -64,9 +78,10 @@
   border-radius: 10px;
   background-color: #fff;
   &:hover {
-    background-color: rgb(246, 70, 61);
     color: #fff;
-    transition: all 0.1s ease;
+    background-color: red;
+    border: 1px solid red;
+    font-weight: bold;
     cursor: pointer;
   }
 }
@@ -81,5 +96,4 @@
   text-align: center;
   font-size: 40px;
   padding-top: 5px;
-  color: blue;
 }
