--- a/src/style/ReceiveCash.css
+++ b/src/style/ReceiveCash.css
@@ -1,7 +1,7 @@
 .cashCharge {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  margin-top: -20px;
 }
 
 .inputValue {
@@ -12,37 +12,3 @@
   font-weight: bold;
   padding-left: 5px;
 }
-.removeBtn {
-  padding: 2.5px 10px;
-  border: 1px solid #000;
-  font-size: 15px;
-  background-color: #fff;
-  color: #000;
-  border-radius: 10px;
-  margin-left: 10px;
-  &:hover {
-    color: red;
-    border: 1px solid red;
-    font-weight: bold;
-    cursor: pointer;
-  }
-}
-/* .cashCharge h4 {
-  margin-right: 20px;
-}
-.cashCharge div {
-  margin-right: 10px;
-} */
-/* #fiveThousand,
-#tenThousand {
-  cursor: pointer;
-  border: 1px solid rgb(246, 181, 61);
-  padding: 5px;
-  border-radius: 10px;
-  background-color: #fff;
-  &:hover {
-    background-color: rgb(246, 181, 61);
-    color: #fff;
-    transition: all 0.1s ease;
-  }
-} */
