--- a/src/style/TopMenu.css
+++ b/src/style/TopMenu.css
@@ -1,21 +1,25 @@
 .postType {
-  width: 100%;
+  width: 430px;
   display: flex;
-  justify-content: center;
-  margin-top: 20px;
+  justify-content: space-between;
+  margin: 20px 0px;
 }
 .type {
-  border: 1px solid rgb(246, 181, 61);
+  background-color: #fff;
   border-radius: 5px;
   height: 20px;
-  padding: 5px 10px;
+  padding: 10px 20px;
+  font-size: 18px;
+
+  font-weight: bold;
   &:hover {
-    background-color: rgb(246, 181, 61);
-    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
     transition: all 0.1s ease;
     cursor: pointer;
   }
 }
+
 .type:nth-child(2) {
   margin: 0 25px;
 }
