--- a/src/style/CalculatedValue.css
+++ b/src/style/CalculatedValue.css
@@ -1,19 +1,20 @@
-.calculatorBox {
-  width: 280px;
-  padding: 0 10px;
-}
 .valueBox {
   display: flex;
-  flex-direction: column;
   width: 100%;
 }
-.weightValue > h2 {
+.weightValue {
+  display: flex;
   width: 100%;
+  height: 300px;
 }
+
 .itValue {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-left: 10px;
+  padding: 0 10px;
+  width: 350px;
 }
 .itValue > p {
   margin-right: 20px;
@@ -24,14 +25,15 @@
 
 .removeBtn {
   padding: 2.5px 10px;
-  border: 1px solid #000;
+  border: 1px solid red;
   font-size: 15px;
   background-color: #fff;
-  color: #000;
+  color: red;
   border-radius: 10px;
   margin-left: 10px;
   &:hover {
-    color: red;
+    background-color: red;
+    color: #fff;
     border: 1px solid red;
     font-weight: bold;
     cursor: pointer;
@@ -51,12 +53,12 @@
   }
 }
 
-.calculBox,
+/* .calculBox,
 .resetBox {
   display: flex;
   justify-content: flex-end;
-}
-.calculBtn {
+} */
+/* .calculBtn {
   border: 1px solid orange;
   padding: 5px 10px;
   font-size: 15px;
@@ -84,8 +86,8 @@
     font-weight: bold;
     cursor: pointer;
   }
-}
-
+} */
+/* 
 .resultBox,
 .resetBtn {
   margin-top: -25px;
@@ -96,4 +98,4 @@
   text-align: center;
   font-size: 40px;
   padding-top: 5px;
-}
+} */
