--- a/src/style/WeightNCharge.css
+++ b/src/style/WeightNCharge.css
@@ -11,10 +11,10 @@
 .middleBox {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .sumNchangeCash {
-  width: 60%;
+  width: 100%;
   display: flex;
   justify-content: space-around;
 }
@@ -24,9 +24,12 @@
 .cash {
   color: aquamarine;
 }
+.quantity {
+  color: yellow;
+}
 
 .closeBox {
-  width: 100%;
+  width: 50%;
   display: flex;
   justify-content: flex-end;
 }
@@ -74,6 +77,9 @@
 }
 .selectBox {
   display: flex;
+  &.active {
+    background-color: darkgoldenrod;
+  }
 }
 .selectBox p {
   margin-top: 22px;
@@ -97,4 +103,7 @@
   height: 300px;
   width: 100%;
   display: flex;
+}
+
+.select {
 }
