--- a/src/style/CalculatedValue.css
+++ b/src/style/CalculatedValue.css
@@ -1,24 +1,41 @@
+.calculatorBox {
+  margin-top: 50px;
+}
+
 .valueBox {
   display: flex;
   width: 100%;
   flex-direction: column;
 }
+.menu {
+  display: flex;
+  align-items: center;
+  width: 700px;
+  border-bottom: 1px solid #ccc;
+  padding-left: 75px;
+}
+.menu_type {
+  margin-right: 75px;
+}
+.menu_weight {
+  margin-right: 125px;
+}
+.menu_price {
+  margin-right: 153px;
+}
+.menu_quantity {
+  margin-right: 125px;
+}
+
 .resetBtn {
-  width: 60px;
-  height: 40px;
-  align-self: flex-end;
-  border: 1px solid rgb(246, 64, 61);
-  padding: 10px 10px;
-  font-size: 15px;
-  border-radius: 10px;
-  background-color: #fff;
-  margin-top: 20px;
+  font-size: 25px;
+  font-weight: bold;
+  background-color: rgb(33, 32, 32);
+  color: #fff;
   &:hover {
-    color: #fff;
-    background-color: red;
-    border: 1px solid red;
-    font-weight: bold;
+    color: greenyellow;
     cursor: pointer;
+    transition: all 0.1s ease;
   }
 }
 .weightValue {
@@ -30,92 +47,51 @@
 .itValue {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-left: 10px;
-  padding: 0 10px;
-  width: 100%;
-  border: 1px solid #acc;
+  width: 700px;
 }
-.itValue > p {
-  margin-right: 20px;
+.itValue_type {
+  margin-left: 35px;
+  margin-right: 60px;
 }
-.quantity {
-  padding: 0 20px;
+.itValue_weight {
+  margin-right: 80px;
+  width: 60px;
+  text-align: center;
+}
+.itValue_price {
+  margin-right: 85px;
+  width: 100px;
+  text-align: center;
+}
+.itValue_quantity {
+  margin-right: 90px;
+  display: flex;
+  align-items: center;
+}
+.it_quantity {
+  font-size: 20px;
+  width: 35px;
+  text-align: center;
+  margin: 0 10px;
 }
 
 .removeBtn {
-  padding: 2.5px 10px;
-  border: 1px solid red;
-  font-size: 15px;
-  background-color: #fff;
-  color: red;
-  border-radius: 10px;
-  margin-left: 10px;
+  font-size: 30px;
+  background-color: rgb(33, 32, 32);
+  color: #fff;
+  font-weight: bold;
   &:hover {
-    background-color: red;
-    color: #fff;
-    border: 1px solid red;
-    font-weight: bold;
+    color: red;
+    transition: all 0.1s ease;
     cursor: pointer;
   }
 }
 .Btn {
-  border: 1px solid rgb(246, 181, 61);
-  padding: 2.5px 10px;
-  font-size: 15px;
-  border-radius: 10px;
-  background-color: #fff;
+  font-size: 20px;
+  color: #fff;
   &:hover {
-    background-color: rgb(246, 181, 61);
-    color: #fff;
+    color: orange;
     transition: all 0.1s ease;
     cursor: pointer;
   }
 }
-
-/* .calculBox,
-.resetBox {
-  display: flex;
-  justify-content: flex-end;
-} */
-/* .calculBtn {
-  border: 1px solid orange;
-  padding: 5px 10px;
-  font-size: 15px;
-  border-radius: 10px;
-  background-color: #fff;
-  &:hover {
-    background-color: orange;
-    color: #fff;
-    font-size: 18px;
-    font-weight: bold;
-    transition: all 0.1s ease;
-    cursor: pointer;
-  }
-}
-.resetBtn {
-  border: 1px solid rgb(246, 64, 61);
-  padding: 5px 10px;
-  font-size: 15px;
-  border-radius: 10px;
-  background-color: #fff;
-  &:hover {
-    color: #fff;
-    background-color: red;
-    border: 1px solid red;
-    font-weight: bold;
-    cursor: pointer;
-  }
-} */
-/* 
-.resultBox,
-.resetBtn {
-  margin-top: -25px;
-}
-
-.changeCash {
-  width: 100%;
-  text-align: center;
-  font-size: 40px;
-  padding-top: 5px;
-} */
