--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,6 +1,16 @@
 body {
   background-color: rgb(33, 32, 32);
 }
+
+header {
+  margin-bottom: -50px;
+  padding: 0;
+  color: #64aff6;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 .title {
   cursor: pointer;
 }
