--- a/src/style/CalculatedValue.css
+++ b/src/style/CalculatedValue.css
@@ -11,21 +11,21 @@
 .menu {
   display: flex;
   align-items: center;
-  width: 700px;
+  width: 750px;
   border-bottom: 1px solid #ccc;
   padding-left: 75px;
 }
 .menu_type {
-  margin-right: 75px;
+  margin-right: 100px;
 }
 .menu_weight {
-  margin-right: 125px;
+  margin-right: 145px;
 }
 .menu_price {
   margin-right: 153px;
 }
 .menu_quantity {
-  margin-right: 125px;
+  margin-right: 120px;
 }
 
 .resetBtn {
@@ -48,15 +48,18 @@
 .itValue {
   display: flex;
   align-items: center;
-  width: 700px;
+  width: 750px;
 }
 .itValue_type {
-  margin-left: 35px;
+  margin-left: 25px;
   margin-right: 60px;
+  background-color: #f0397c;
+  padding: 5px 7px;
+  border-radius: 10px;
 }
 .itValue_weight {
   margin-right: 80px;
-  width: 60px;
+  width: 100px;
   text-align: center;
 }
 .itValue_price {
