--- a/src/style/ReceiveCash.css
+++ b/src/style/ReceiveCash.css
@@ -4,11 +4,31 @@
   margin-top: -20px;
 }
 
+.inputCash {
+  display: flex;
+}
+
 .inputValue {
   outline: none;
   border: none;
   border-bottom: 2px solid #ccc;
+  border-radius: 10px;
   font-size: 20px;
   font-weight: bold;
-  padding-left: 5px;
+  padding-left: 10px;
+}
+
+.calculBtn {
+  padding: 6px 10px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  color: #000;
+  background-color: #ccc;
+  &:hover {
+    color: #fff;
+    background-color: coral;
+    cursor: pointer;
+  }
 }
