--- a/src/style/SumAndTotal.css
+++ b/src/style/SumAndTotal.css
@@ -1,29 +1,31 @@
-.info {
-  width: 750px;
-  text-align: center;
-}
-.info > h3 {
-  color: red;
-}
-
 .middleBox {
-  width: 100%;
+  width: 750px;
   display: flex;
   justify-content: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
-.sumNchangeCash {
+.sumNTotal {
   width: 100%;
   display: flex;
   justify-content: space-around;
+  margin-top: -10px;
 }
 .sum {
   color: orange;
-}
-.cash {
-  color: aquamarine;
+  padding: 5px 10px;
 }
 .quantity {
   color: yellow;
+  padding: 5px 10px;
+}
+.cash {
+  background-color: forestgreen;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 10px;
+  width: 160px;
+  text-align: center;
 }
 
 .closeBox {
