--- a/src/style/WeightNCharge.css
+++ b/src/style/WeightNCharge.css
@@ -1,5 +1,16 @@
 .postBox {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 100vw;
+  border-radius: 20px;
+  margin-top: 20px;
+  padding: 0px 20px 20px 0px;
+}
+
+.postInputResultBox {
+  display: flex;
   flex-direction: column;
   align-items: center;
   height: auto;
@@ -66,5 +77,10 @@
   display: flex;
 }
 
-.select {
+.changeCashBox {
+  display: flex;
+  justify-content: center;
+  margin-left: 100px;
+  margin-top: -45px;
+  color: antiquewhite;
 }
