--- a/src/style/weightType/NewFastRegisterWeight.css
+++ b/src/style/weightType/NewFastRegisterWeight.css
@@ -4,7 +4,8 @@
   border-bottom: 2px solid #ccc;
   font-size: 20px;
   font-weight: bold;
-  padding-left: 5px;
+  padding-left: 10px;
+  border-radius: 10px;
 }
 
 .weightBtn {
