--- a/src/style/WeightNCharge.css
+++ b/src/style/WeightNCharge.css
@@ -79,3 +79,19 @@
   margin-top: -45px;
   color: antiquewhite;
 }
+
+.chargeValue {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.minusValue {
+  font-size: 45px;
+  color: #e93c3c;
+  padding: 10px;
+  border-radius: 10px;
+  width: 660px;
+  text-align: center;
+}
